--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -233,5 +233,18 @@
             android:label="@string/profile_select"
             android:excludeFromRecents="true"/>
 
+        <activity android:name="Settings$PieSettingsActivity"
+                android:label="@string/pie_settings"
+                android:taskAffinity=""
+                android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.android.settings.PIE_SETTINGS" />
+                <action android:name="android.settings.PIE_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="org.cyanogenmod.cmparts.custom.PieSettings" />
+        </activity>
+
     </application>
 </manifest>
